# lg-webos-openwrt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-ipk.yml
config/: lgtvctl.toml
openwrt/: Makefile
openwrt/package/lgtvctl/: Makefile
openwrt/package/lgtvctl/files/: lgtvctl.init  lgtvctl.toml
scripts/: build-immortalwrt-24.10.5-ramips-mt7621.sh  build-openwrt.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  webos.rs  wol.rs
